force-app/main/default/objects/Contact/fields/AVO_ConInfoVerDt__c.field-meta.xml
<CustomField>
    <fullName>AVO_ConInfoVerDt__c</fullName>
    <label>Contact Info Verification Date</label>
    <type>Date</type>
</CustomField>