force-app/main/default/objects/Contact/fields/AVO_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Contact_ID__c</fullName>
    <label>Contact ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>