force-app/main/default/objects/Contact/fields/AVO_Contact_Last_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Contact_Last_Verified_Date__c</fullName>
    <label>Contact Last Verified Date</label>
    <type>Date</type>
</CustomField>