force-app/main/default/objects/Contact/fields/AVO_Contract_Lic_or_Cert_No__c.field-meta.xml
<CustomField>
    <fullName>AVO_Contract_Lic_or_Cert_No__c</fullName>
    <label>Contract Lic or Cert No</label>
    <length>22</length>
    <type>Text</type>
</CustomField>