force-app/main/default/objects/Contact/fields/AVO_Farm_Corp_Name__c.field-meta.xml
<CustomField>
    <fullName>AVO_Farm_Corp_Name__c</fullName>
    <label>Farm/Corp Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>