force-app/main/default/objects/Contact/fields/AVO_LegacyID__c.field-meta.xml
<CustomField>
    <fullName>AVO_LegacyID__c</fullName>
    <label>AVO LegacyID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>