force-app/main/default/objects/Contact/fields/AVO_Note__c.field-meta.xml
<CustomField>
    <fullName>AVO_Note__c</fullName>
    <label>Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>