force-app/main/default/objects/Contact/fields/Contractor_License_No__c.field-meta.xml
<CustomField>
    <fullName>Contractor_License_No__c</fullName>
    <label>Contractor License No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>