force-app/main/default/objects/Contact/fields/Is_mailing_and_physical_address_the_same__c.field-meta.xml
<CustomField>
    <fullName>Is_mailing_and_physical_address_the_same__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is mailing and physical address the same</label>
    <type>Checkbox</type>
</CustomField>