force-app/main/default/objects/Contact/fields/MUSW__Confidential__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confidential</label>
    <type>Checkbox</type>
</CustomField>