force-app/main/default/objects/Contact/fields/sog_Allow_Customer_Portal_Self_Register__c.field-meta.xml
<CustomField>
    <fullName>sog_Allow_Customer_Portal_Self_Register__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If you allow access to a customer portal, when selected, allows contacts to self-register for it.</description>
    <label>Allow Customer Portal Self-Registration</label>
    <type>Checkbox</type>
</CustomField>