force-app/main/default/objects/Contact/fields/sog_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>sog_Contact_Type__c</fullName>
    <description>Picklist of Type of Contact (Owner, Operator, Well contractor, etc.)</description>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assessment Contractor</fullName>
            </value>
            <value>
                <fullName>Bond Surety</fullName>
            </value>
            <value>
                <fullName>Bonded Driller</fullName>
            </value>
            <value>
                <fullName>Compliance Contact</fullName>
            </value>
            <value>
                <fullName>Maintenance Contractors</fullName>
            </value>
            <value>
                <fullName>Manufacturer/Vendor</fullName>
            </value>
            <value>
                <fullName>Meter Installer</fullName>
            </value>
            <value>
                <fullName>Permit Operator</fullName>
            </value>
            <value>
                <fullName>Permit Owner</fullName>
            </value>
            <value>
                <fullName>Pump Contractor</fullName>
            </value>
            <value>
                <fullName>Well Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>